@@ -26,6 +26,10 @@
 FROM eclipse-temurin:21-jre
 WORKDIR /app
 
+# Criar diretório de uploads dentro do container
+RUN mkdir -p /var/bellory/dev/uploads && \
+    chmod -R 755 /var/bellory/dev/uploads
+
 # Copia o JAR existente
 COPY Bellory-1.0-SNAPSHOT.jar app.jar
 
@@ -33,5 +37,4 @@ COPY Bellory-1.0-SNAPSHOT.jar app.jar
 EXPOSE 8081
 
 # Comando para iniciar a aplicação
-#ENTRYPOINT ["sh", "-c", "java --enable-preview -jar app.jar --server.port=${SERVER_PORT:-8080} --spring.profiles.active=${SPRING_PROFILES_ACTIVE:-prod}"]
 ENTRYPOINT ["java", "--enable-preview", "-jar", "app.jar"]
